// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpenseList with empty message 1`] = `
"<div>
  <h1>
    Expense List
  </h1>
  <p>
    No Expenses
  </p>
</div>"
`;

exports[`Should render ExpenseList with expenses 1`] = `
"<div>
  <h1>
    Expense List
  </h1>
  <ExpenseListItem id=\\"1\\" description=\\"Gum\\" note=\\"\\" amount={195} createdAt={0} />
  <ExpenseListItem id=\\"2\\" description=\\"rent\\" note=\\"\\" amount={109500} createdAt={-345600000} />
  <ExpenseListItem id=\\"3\\" description=\\"credit card\\" note=\\"\\" amount={4500} createdAt={345600000} />
</div>"
`;
